fixed extra margins in vacancy page

--- a/app/assets/stylesheets/large.css.scss
+++ b/app/assets/stylesheets/large.css.scss
@@ -124,7 +124,7 @@ $white_link: rgba(255,255,255, 0.75);
       padding-top: 160px;
       margin-top: -80px; 
     }
-    &#news-item {
+    &#news-item, &#job_description {
       margin-top: 0;
       padding-top: 0;
     }
